--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 CLIENT_ID='4498276c-cf85-459c-aa39-f8df127022fd'
-CLIENT_SECRET=ca4c77a3-83c2-427f-96b9-6b77aea0c701'
+CLIENT_SECRET='ca4c77a3-83c2-427f-96b9-6b77aea0c701'
 SCOPE='crm.objects.contacts.read,crm.objects.contacts.write'
